[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Placer/Placer.gd" type="Script" id=1]

[node name="Placer" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Tween" type="Tween" parent="."]

[node name="PositionA" type="Position2D" parent="."]

[node name="PositionB" type="Position2D" parent="."]
position = Vector2( 28, 0 )

[node name="PositionC" type="Position2D" parent="."]
position = Vector2( 56, 0 )

[node name="Container" type="Node2D" parent="."]
